[gd_scene load_steps=11 format=3 uid="uid://cyddvf2whayqg"]

[ext_resource type="Script" path="res://scenes/boss/boss.gd" id="1_2nkku"]
[ext_resource type="Texture2D" uid="uid://04b6vjmxexbw" path="res://scenes/boss/boss blue shoots (1).png" id="2_fbf6k"]
[ext_resource type="Texture2D" uid="uid://byc5bwc3gw80u" path="res://scenes/boss/strong boss blue shoots (1).png" id="3_xk47s"]
[ext_resource type="Texture2D" uid="uid://c5b5t5eh2urjh" path="res://scenes/boss/strong boss1 shoots.png" id="4_b87h8"]

[sub_resource type="Animation" id="Animation_0ftt3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fbf6k")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7gfpr"]
resource_name = "basic"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fbf6k")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_mxqp2"]
resource_name = "large"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_xk47s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_gvama"]
resource_name = "large_weak"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_b87h8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0tdn"]
_data = {
"RESET": SubResource("Animation_0ftt3"),
"basic": SubResource("Animation_7gfpr"),
"large": SubResource("Animation_mxqp2"),
"large_weak": SubResource("Animation_gvama")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_efj5w"]
radius = 30.0
height = 66.0

[node name="Boss" type="StaticBody2D" groups=["boss"]]
script = ExtResource("1_2nkku")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d0tdn")
}
autoplay = "basic"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 6)
shape = SubResource("CapsuleShape2D_efj5w")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fbf6k")
vframes = 2

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Node2D" parent="SpawnPoints"]
position = Vector2(63, 186)

[node name="SpawnPoint2" type="Node2D" parent="SpawnPoints"]
position = Vector2(-5, 220)

[node name="SpawnPoint3" type="Node2D" parent="SpawnPoints"]
position = Vector2(-4, 289)

[node name="SpawnPointsSecondStage" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Node2D" parent="SpawnPointsSecondStage"]
position = Vector2(-95, 220)

[node name="SpawnPoint2" type="Node2D" parent="SpawnPointsSecondStage"]
position = Vector2(12, 320)

[node name="SpawnPoint3" type="Node2D" parent="SpawnPointsSecondStage"]
position = Vector2(99, 333)

[node name="SecondStageProjectilSpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Node2D" parent="SecondStageProjectilSpawnPoints"]
position = Vector2(-152, -3)

[node name="SpawnPoint2" type="Node2D" parent="SecondStageProjectilSpawnPoints"]
position = Vector2(153, 1)
